# simple-web-scraper

./: Cargo.toml  EXAMPLES.md  README.md
examples/: README.md  books-basic.csv  books-basic.json  books-basic.txt  books-crawl.csv
src/: main.rs
