[package]
name = "simple-web-scraper"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
csv = "1.3"
log = "0.4"
env_logger = "0.11"
thiserror = "1.0"
url = "2.5"
regex = "1.10"
futures = "0.3"
