[package]
name = "simple-web-scraper"
version = "0.2.0"
edition = "2021"

[dependencies]
tokio = { version = "1.48.0", features = ["full"] }
reqwest = { version = "0.12.24", features = ["json"] }
scraper = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["derive"] }
csv = "1.4.0"
log = "0.4.28"
env_logger = "0.11.8"
thiserror = "2.0.17"
url = "2.5.7"
regex = "1.12.2"
futures = "0.3.31"
